ET-321 Fix footer from overflowing on mobile

--- a/src/components/Footer/Footer.sass
+++ b/src/components/Footer/Footer.sass
@@ -20,6 +20,9 @@ footer
       align-items: center
       margin: $space-2 0
 
+      @media (max-width: $screen-sm-min) // {}
+        flex-direction: column
+
     a
       white-space: nowrap
       color: $color-white
